# brainfuck-py

./: .gitignore  .replit  .tool-versions  LICENSE  Pipfile  README.md  brainfuck.py  check.b  collatz.b  pyproject.toml
brainfuck_py/: interpreter.py
samples/: factorial.b  fib.b  squares.b
