[tool.poetry]
name = "brainfuck-py"
version = "0.1.0"
description = "A brainfuck interpreter written in Python"
authors = ["Manikandan Sundararajan <mani@hey.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "brainfuck_py"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "18.9b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
interpret = "brainfuck_py.interpreter:main"
repl = "brainfuck_py.interpreter:repl"